[gd_scene load_steps=5 format=3 uid="uid://36td0mchomgw"]

[ext_resource type="Script" path="res://Script/Dungeon3.gd" id="1_l24qy"]
[ext_resource type="TileSet" uid="uid://bourpaof5g2kp" path="res://Scene/TileMap1.tres" id="1_t8hru"]
[ext_resource type="PackedScene" uid="uid://c8pnqpx6je86j" path="res://Entity/Player.tscn" id="3_dh7f5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfhh6"]
size = Vector2(37, 72)

[node name="Dungeon3" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_l24qy")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_t8hru")
format = 2
layer_0/name = "Ground"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(0, 4, 2, 65536, 4, 2, 131072, 65539, 2, 1, 4, 2, 65537, 4, 2, 131073, 4, 2, 2, 4, 2, 65538, 4, 2, 131074, 4, 2, 3, 4, 2, 65539, 4, 2, 131075, 4, 2, 4, 4, 2, 65540, 4, 2, 131076, 4, 2, 5, 4, 2, 65541, 4, 2, 131077, 4, 2, 6, 4, 2, 65542, 4, 2, 131078, 4, 2, 7, 4, 2, 65543, 4, 2, 131079, 4, 2, 8, 4, 2, 65544, 4, 2, 131080, 4, 2, 9, 4, 2, 65545, 4, 2, 131081, 4, 2, 10, 4, 2, 65546, 4, 2, 131082, 4, 2, 11, 4, 2, 65547, 4, 2, 131083, 4, 2, 12, 4, 2, 65548, 4, 2, 131084, 4, 2, 13, 4, 2, 65549, 4, 2, 131085, 4, 2, 14, 4, 2, 65550, 4, 2, 131086, 4, 2, 15, 4, 2, 65551, 4, 2, 131087, 4, 2, 196620, 131076, 2, 262156, 131076, 2, 327692, 131076, 2, 196621, 4, 2, 262157, 131076, 2, 327693, 131076, 2, 196622, 4, 2, 262158, 131076, 2, 327694, 131076, 2, 196623, 4, 2, 262159, 4, 2, 327695, 131076, 2, 196616, 4, 2, 327688, 131076, 2, 196617, 4, 2, 262153, 131076, 2, 327689, 131076, 2, 196618, 131076, 2, 262154, 131076, 2, 327690, 131076, 2, 196619, 131076, 2, 262155, 131076, 2, 327691, 131076, 2, 196608, 4, 2, 262144, 4, 2, 327680, 458755, 1, 196609, 4, 2, 262145, 4, 2, 327681, 196611, 2, 196610, 4, 2, 262146, 4, 2, 327682, 131076, 2, 196611, 4, 2, 327683, 131076, 2, 196612, 4, 2, 196613, 4, 2, 262149, 4, 2, 327685, 131076, 2, 327686, 131076, 2, 196615, 4, 2, 327687, 131076, 2, 393216, 4, 2, 458752, 4, 2, 524288, 4, 2, 393217, 4, 2, 458753, 4, 2, 524289, 4, 2, 393218, 4, 2, 458754, 4, 2, 524290, 4, 2, 393219, 131076, 2, 458755, 4, 2, 524291, 4, 2, 393220, 131076, 2, 458756, 4, 2, 524292, 4, 2, 393221, 131076, 2, 458757, 4, 2, 524293, 4, 2, 393222, 131076, 2, 458758, 4, 2, 524294, 4, 2, 393223, 131076, 2, 458759, 4, 2, 524295, 4, 2, 393224, 131076, 2, 458760, 4, 2, 524296, 4, 2, 393225, 131076, 2, 458761, 4, 2, 524297, 4, 2, 393226, 4, 2, 458762, 4, 2, 524298, 4, 2, 393227, 4, 2, 458763, 4, 2, 524299, 4, 2, 393228, 131076, 2, 458764, 4, 2, 524300, 4, 2, 393229, 131076, 2, 458765, 131076, 2, 524301, 4, 2, 393230, 131076, 2, 458766, 131076, 2, 524302, 4, 2, 393231, 131076, 2, 458767, 131076, 2, 524303, 4, 2, 16, 4, 2, 65552, 4, 2, 131088, 4, 2, 17, 4, 2, 65553, 4, 2, 131089, 4, 2, 18, 4, 2, 65554, 4, 2, 131090, 4, 2, 19, 4, 2, 65555, 4, 2, 131091, 4, 2, 196624, 4, 2, 262160, 4, 2, 327696, 4, 2, 196625, 4, 2, 262161, 4, 2, 327697, 4, 2, 196626, 4, 2, 262162, 4, 2, 327698, 4, 2, 196627, 4, 2, 262163, 4, 2, 327699, 131076, 2, 393232, 131076, 2, 458768, 131076, 2, 524304, 131076, 2, 393233, 131076, 2, 458769, 131076, 2, 524305, 131076, 2, 393234, 131076, 2, 458770, 131076, 2, 524306, 4, 2, 393235, 131076, 2, 458771, 131076, 2, 524307, 4, 2, 589833, 4, 2, 589834, 4, 2, 589842, 4, 2, 589841, 4, 2, 589840, 4, 2, 589839, 4, 2, 589838, 4, 2, 589837, 4, 2, 589836, 4, 2, 589835, 4, 2, 589843, 4, 2, 589824, 4, 2, 589825, 4, 2, 589826, 4, 2, 589827, 4, 2, 589828, 4, 2, 589829, 4, 2, 589830, 4, 2, 589831, 4, 2, 589832, 4, 2, 262147, 131076, 2, 262148, 131076, 2, 327684, 131076, 2, 196614, 4, 2, 262150, 4, 2, 262151, 4, 2, 262152, 4, 2)
layer_1/name = "Walls"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(131072, 524291, 7, 196608, 524291, 7, 262144, 65539, 5, 393216, 131075, 4, 458752, 524291, 7, 524288, 524291, 7, 589824, 524291, 7, 1, 3, 1, 65537, 3, 3, 131073, 3, 3, 196609, 3, 2, 262145, 131075, 5, 393217, 196611, 5, 458753, 3, 2, 524289, 3, 2, 589825, 3, 2, 0, 524291, 7, 65536, 524291, 7)
layer_2/name = "YSort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(589826, 65540, 0, 524290, 65540, 0, 458754, 4, 0, 589827, 65540, 0, 524291, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 65540, 0, 524299, 4, 0, 458764, 4, 0, 524300, 65540, 0, 589836, 65540, 0, 589837, 65540, 0, 524301, 4, 0, 589838, 4, 0, 589841, 4, 0, 589840, 4, 0, 589839, 4, 0, 589842, 65540, 0, 524306, 4, 0, 524307, 4, 0, 589843, 65540, 0, 65538, 65540, 0, 2, 65540, 0, 131075, 65540, 0, 65539, 65540, 0, 3, 65540, 0, 65540, 65540, 0, 4, 65540, 0, 65541, 65540, 0, 5, 65540, 0, 6, 65540, 0, 7, 65540, 0, 65544, 65540, 0, 8, 65540, 0, 65545, 65540, 0, 9, 65540, 0, 65546, 65540, 0, 10, 65540, 0, 11, 65540, 0, 12, 65540, 0, 65549, 65540, 0, 13, 65540, 0, 65550, 65540, 0, 14, 65540, 0, 65551, 65540, 0, 15, 65540, 0, 131087, 65540, 0, 131088, 65540, 0, 65552, 65540, 0, 16, 65540, 0, 196625, 65540, 0, 131089, 65540, 0, 65553, 65540, 0, 17, 65540, 0, 196626, 65540, 0, 131090, 65540, 0, 18, 65540, 0, 65555, 65540, 0, 65554, 65540, 0, 131091, 65540, 0, 19, 65540, 0, 262149, 131076, 0, 655364, 65540, 0, 655365, 65540, 0, 655366, 65540, 0, 655367, 65540, 0, 655368, 65540, 0, 655369, 65540, 0, 655370, 65540, 0, 655375, 65540, 0, 655376, 65540, 0, 655377, 65540, 0)

[node name="Player" parent="." instance=ExtResource("3_dh7f5")]
position = Vector2(349, 147)

[node name="Dungeon2_Transfer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Dungeon2_Transfer"]
position = Vector2(-20, 175)
shape = SubResource("RectangleShape2D_mfhh6")

[connection signal="body_entered" from="Dungeon2_Transfer" to="." method="_on_dungeon_2_transfer_body_entered"]
[connection signal="body_exited" from="Dungeon2_Transfer" to="." method="_on_dungeon_2_transfer_body_exited"]
